--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   </head>
   <body>
     <!--[if lt IE 7]>
