chore: ajouter layout
Inclure le layout aux différents templates.
Ajouter style css pour le heading des templates.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,4 @@
-<h1>Gestion des Stocks et Approvisionnement</h1>
+{% include 'layout.html' %}
+<h1 class="text-3xl font-bold underline">
+  Gestion des Stocks et Approvisionnement
+</h1>
