feat: ajouter barre de navigation

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,8 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
+    {% include 'navbar.html' %}
+    <div class="flex flex-col px-4">{% block content %} {% endblock %}</div>
 
     <script src="" async defer></script>
   </body>
