--- a/templates/appro.html
+++ b/templates/appro.html
@@ -1,2 +1,3 @@
-{% include 'layout.html' %}
+{% extends 'layout.html' %} {% block content %}
 <h1 class="text-3xl font-bold underline">Approvisionnement</h1>
+{% endblock content %}%}
