--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
-{% include 'layout.html' %}
+{% extends 'layout.html' %} {% block content %}
 <h1 class="text-3xl font-bold underline">
   Gestion des Stocks et Approvisionnement
 </h1>
+{% endblock content %}
