refactor: app templates
Creer dossier pour les templates pour les vues de l'application.

--- a/base/templates/base/produit.html
+++ b/base/templates/base/produit.html
@@ -1,3 +1,6 @@
 {% extends 'layout.html' %} {% block content %}
 <h1 class="text-3xl font-bold underline">Produits</h1>
+<div class="text-2xl">
+  <h2>Liste Produits</h2>
+</div>
 {% endblock content %}%}
