--- a/base/templates/base/produit.html
+++ b/base/templates/base/produit.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %} {% block content %}
 <h1 class="text-3xl font-bold underline">Produits</h1>
-<div class="text-2xl">
-  <h2>Liste Produits</h2>
+<div>
+  {% block produit %}{% endblock produit %}
+  <h2 class="text-2xl">Liste Produits</h2>
 </div>
-{% endblock content %}%}
+{% endblock content %}
