fix: largeur contenu

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,9 @@
       </p>
     <![endif]-->
     {% include 'navbar.html' %}
-    <div class="flex flex-col px-4">{% block content %} {% endblock %}</div>
+    <div class="flex flex-col px-4 max-w-xl m-auto">
+      {% block content %} {% endblock %}
+    </div>
 
     <script src="" async defer></script>
   </body>
