fix: enlever limite largeur contenu

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
       </p>
     <![endif]-->
     {% include 'navbar.html' %}
-    <div class="flex flex-col px-4 max-w-xl m-auto">
+    <div class="flex flex-col px-4 m-auto">
       {% block content %} {% endblock %}
     </div>
 
