refactor: lien fiche produit
Utiliser le nom de la vue en lieu et place du chemin relatif.

--- a/base/templates/base/produit.html
+++ b/base/templates/base/produit.html
@@ -9,7 +9,7 @@
     >
       <h5 class="font-bold">
         <a
-          href="/produit/{{produit.designation}}"
+          href="{% url 'ficheProduit' produit.designation %}"
           class="transition duration-150 all hover:text-gray-400"
         >
           {{produit.libelle}}
