--- a/base/templates/base/produit_form.html
+++ b/base/templates/base/produit_form.html
@@ -5,13 +5,23 @@
     action=""
     class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
   >
-    <h2 class="text-2xl">Ajouter un nouveau produit</h2>
-    {% csrf_token %} {{ form.as_p }}
+    <h2 class="text-2xl">
+      {% if operation == "update" %}Modifier produit {% else %}Ajouter un
+      nouveau produit{% endif %}
+    </h2>
+    {% csrf_token %} {{ form.as_p }} {% if operation == "update" %}
+    <input
+      type="submit"
+      value="Modifier"
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4"
+    />
+    {% else %}
     <input
       type="submit"
       value="Créer"
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4"
     />
+    {% endif %}
   </form>
 </div>
 {% endblock content %}
