--- a/base/templates/base/produit.html
+++ b/base/templates/base/produit.html
@@ -12,7 +12,7 @@
   <div class="flex gap-4">
     {% for produit in produits %}
     <div
-      class="flex flex-col justify-between gap-4 rounded-lg bg-white drop-shadow-lg px-5 py-5 max-w-5 transition duration-150 all hover:-translate-y-2"
+      class="flex flex-col justify-between gap-4 rounded-lg bg-white drop-shadow-lg px-5 py-5 max-w-5 transition duration-150 all hover:-translate-y-2 max-w-sm"
     >
       <h5 class="font-bold">
         <a
@@ -24,7 +24,8 @@
       </h5>
       <p>{{produit.description}}</p>
       <p class="italic">{{produit.statut}}</p>
-      <a href={% url 'update-produit' produit.id %}>Mettre à jour</a>
+      <a href={% url 'update-produit' produit.id %} class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Mettre à jour</a>
+      <a href={% url 'delete-produit' produit.id %} class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Supprimer</a>
     </div>
     {% endfor %}
   </div>
