refactor(global): creer applications
Renommer l'application 'base' en 'produits'.
Deplacer chaque modele dans son application.
- produits
- matieres
- stocks
Generer requirements.txt.
Changer les url pour utiliser le nom des url au lieu des chemins
relatifs.
Supprimer les migrations pour les tables autres que matieres.

BREAKING CHANGE: le changement du nom de l'application base en produits
peut entrainer des erreurs au niveau de django.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,6 @@
 >
   <a class="font-bold" href="/">GSA</a>
   <span class="flex justify-between gap-4">
-    <a class="font-light" href="/produit">Produits</a>
-    <a class="font-light" href="/appro">Approvisionnement</a>
+    <a class="font-light" href="{% url 'produit' %}">Produits</a>
   </span>
 </nav>
