--- a/produits/templates/produits/produit.html
+++ b/produits/templates/produits/produit.html
@@ -2,13 +2,13 @@
 <div class="flex justify-between">
   <h1 class="text-3xl font-bold underline">Produits</h1>
   <a
-    href="/create-produit"
+    href="{% url 'create-produit' %}"
     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
     >Ajouter un produit</a
   >
 </div>
 <div>
-  <a href="/produit" class="text-xl">Liste Produits</a>
+  <a href="{% url 'produit' %}" class="text-xl">Liste Produits</a>
   <div class="flex gap-4">
     {% for produit in produits %}
     <div
