--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,5 +4,6 @@
   <a class="font-bold" href="/">GSA</a>
   <span class="flex justify-between gap-4">
     <a class="font-light" href="{% url 'produit' %}">Produits</a>
+    <a class="font-light" href="{% url 'matieres' %}">Matieres</a>
   </span>
 </nav>
