feat: suppression de matières fonctionnelle

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.1/dist/flowbite.min.css" />
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   </head>
   <body>
@@ -26,5 +27,8 @@
     </div>
 
     <script src="" async defer></script>
+    {% block customScripts %}
+
+    {% endblock customScripts %}
   </body>
 </html>
