chore: configurations app commandes
Ajouter l'application pour les commandes aux applications installées
dans gestionstocks/settings.py
Inclure les liens de l'application commandes dans gestionstocks/urls.py
Créer la page d'accueil de l'application commandes:
- ajouter l'url
- creer la vue
Ajouter le lien vers l'application commandes dans la barre de navigation

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,5 +5,6 @@
   <span class="flex justify-between gap-4">
     <a class="font-light" href="{% url 'produit' %}">Produits</a>
     <a class="font-light" href="{% url 'matieres' %}">Matieres</a>
+    <a class="font-light" href="{% url 'commandes' %}">Commandes</a>
   </span>
 </nav>
