feat: application clients
Ajouter l'application pour la gestion des clients
- installer l'application dans gestionstocks/settings.py
- ajouter les urls pour l'application
- créer la vue pour la page d'accueil de l'application

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,5 +6,6 @@
     <a class="font-light" href="{% url 'produit' %}">Produits</a>
     <a class="font-light" href="{% url 'matieres' %}">Matieres</a>
     <a class="font-light" href="{% url 'commandes' %}">Commandes</a>
+    <a class="font-light" href="{% url 'clients' %}">Clients</a>
   </span>
 </nav>
