--- a/produits/templates/produits/ficheProduit.html
+++ b/produits/templates/produits/ficheProduit.html
@@ -1,9 +1,66 @@
 {% extends 'layout.html' %} {% block content %}
-<div class="flex flex-col gap-4">
-  <h2 class="text-xl">{{ produit.libelle }}</h2>
-  <p>Libellé: {{ produit.libelle }}</p>
-  <p>Désignation: {{ produit.designation }}</p>
-  <p>Description: {{ produit.description }}</p>
-  <p>Statut: {{ produit.statut }}</p>
+<div class="flex justify-between">
+  <h1 class="text-3xl font-bold underline">Produits</h1>
+  <a
+    href="{{request.META.HTTP_REFERER}}"
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+    >Retour</a
+  >
+</div>
+<div class="grid grid-cols-3 gap-4 mt-4">
+  <div class="flex flex-col rounded-lg bg-white drop-shadow-lg px-5 py-5">
+    <h1>Client</h1>
+    <div class="table w-full">
+      <div class="table-header-group">
+        <div class="table-row">
+          <div class="table-cell text-left"></div>
+          <div class="table-cell text-left"></div>
+        </div>
+      </div>
+      <div class="table-row-group">
+        <div class="table-row">
+          <div class="table-cell">Libellé</div>
+          <div class="table-cell">{{produit.libelle}}</div>
+        </div>
+        <div class="table-row">
+          <div class="table-cell">Désignation</div>
+          <div class="table-cell">{{produit.designation}}</div>
+        </div>
+        <div class="table-row">
+          <div class="table-cell">Description</div>
+          <div class="table-cell">{{produit.description}}</div>
+        </div>
+        <div class="table-row">
+          <div class="table-cell">Statut</div>
+          <div class="table-cell">{{produit.statut}}</div>
+        </div>
+        <div class="table-row">
+          <div class="table-cell">Date d'ajout</div>
+          <div class="table-cell">{{produit.createdAt}}</div>
+        </div>
+        <div class="table-row">
+          <div class="table-cell">Dernière modification</div>
+          <div class="table-cell">{{produit.updatedAt}}</div>
+        </div>
+      </div>
+    </div>
+    <div class="flex mt-4 gap-4">
+      <a
+        href="{% url 'update-produit' produit.id %}"
+        class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        >Mettre à jour</a
+      >
+      <a
+        href="{% url 'delete-produit' produit.id %}"
+        class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        >Supprimer</a
+      >
+    </div>
+  </div>
+  <div
+    class="col-span-2 flex flex-col rounded-lg bg-white drop-shadow-lg px-5 py-5"
+  >
+    <h1>Commandes</h1>
+  </div>
 </div>
 {% endblock content %}
