--- a/produits/templates/produits/produit.html
+++ b/produits/templates/produits/produit.html
@@ -8,7 +8,55 @@
   >
 </div>
 <div>
-  <a href="{% url 'produit' %}" class="text-xl">Liste Produits</a>
+  <div class="flex flex-col bg-white shadow-md rounded p-8 mb-4 mt-4">
+    <table class="border-collapse table-auto w-full text-sm">
+      <thead>
+        <tr>
+          <th
+            class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-600 text-left"
+          >
+            Designation
+          </th>
+          <th
+            class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-600 text-left"
+          >
+            Libelle
+          </th>
+          <th
+            class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-600 text-left"
+          >
+            Description
+          </th>
+          <th
+            class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-600 text-left"
+          >
+            Statut
+          </th>
+  
+          <th
+            class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-600 text-left"
+          ></th>
+        </tr>
+      </thead>
+      {% if produits %}
+      <tbody>
+        {% for produit in produits %}
+        <tr class="border-b border-slate-100 h-12 text-slate-500">
+          <td>{{ produit.designation }}</td>
+          <td>{{ produit.libelle}}</td>
+          <td>{{ produit.description}}</td>
+          <td>{{ produit.statut }}</td>
+          <td>
+            <a href={% url 'fiche-produit' produit.id %} class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Consulter</a>
+            <a href={% url 'update-produit' produit.id %} class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Mettre à jour</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+      {% endif %}
+    </table>
+  </div>
+  {% comment %} <a href="{% url 'produit' %}" class="text-xl">Liste Produits</a>
   <div class="flex gap-4">
     {% for produit in produits %}
     <div
@@ -28,6 +76,6 @@
       <a href={% url 'delete-produit' produit.id %} class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Supprimer</a>
     </div>
     {% endfor %}
-  </div>
+  </div> {% endcomment %}
 </div>
 {% endblock content %}
