--- a/produits/templates/produits/produit_form.html
+++ b/produits/templates/produits/produit_form.html
@@ -1,4 +1,12 @@
 {% extends 'layout.html' %} {% block content %}
+<div class="flex justify-between">
+  <h1 class="text-3xl font-bold underline">Produits</h1>
+  <a
+    href="{{request.META.HTTP_REFERER}}"
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+    >Retour</a
+  >
+</div>
 <div class="max-w-lg m-auto">
   <form
     method="POST"
