--- a/commandes/templates/commandes/commandes.html
+++ b/commandes/templates/commandes/commandes.html
@@ -2,7 +2,7 @@
 <div class="flex justify-between">
   <h1 class="text-3xl font-bold underline">Commandes</h1>
   <a
-    href=""
+    href="{% url 'create-commande' %}"
     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
     >Passer une commande</a
   >
