chore: ajouter jquery

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
-    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.1/dist/flowbite.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flowbite@1.4.1/dist/flowbite.min.css"
+    />
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   </head>
   <body>
@@ -27,8 +30,7 @@
     </div>
 
     <script src="" async defer></script>
-    {% block customScripts %}
-
-    {% endblock customScripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    {% block customScripts %} {% endblock customScripts %}
   </body>
 </html>
