fix: local install of tailwind

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://unpkg.com/flowbite@1.4.1/dist/flowbite.min.css"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static "css/tailwind-output.css" %}">
   </head>
   <body>
